...
  const displayLightningAddress = lightningAddress
    ? addAddressBreakOpportunities(lightningAddress)
    : "";

  const handleScannerValue = (value: string) => {
    setMode("my-code");
    tabNavigation?.navigate("Send", { destination: value, requestId: Date.now() });
  };

  const { showCamera, setShowCamera, handleScanPress, codeScanner } = useQRCodeScanner({
    onScan: handleScannerValue,
  });

...
