...
  Receive: undefined;
  Send: {
    destination?: string;
    repeatPayment?: RepeatPaymentDetails;
    requestId?: number;
  };
  History: NavigatorScreenParams<TransactionsStackParamList> | undefined;
};

export type SettingsStackParamList = {
  SettingsList: undefined;
  Profile: undefined;
  Language: undefined;
...
