...

    walletData.push({
      id: "boardArk",
      title: gt("Board to Ark"),
      description: gt("Manually move onchain bitcoin into Ark."),
      isPressable: true,
      testID: "settings-board-ark",
    });

    debugData.push({
      id: "showLogs",
      title: gt("Show Logs"),
      description: gt("View application logs for debugging purposes"),
...
