appId: com.noahwallet.regtest
---
- tapOn: "Create Wallet"
- assertVisible: "Noah is in beta"
- tapOn: "I accept"
- assertVisible: "Your Recovery Phrase"
- tapOn: "I Have Saved It, Continue"
- extendedWaitUntil:
    visible: "Emergency Email"
    timeout: 10000
