appId: com.noahwallet.regtest
---
- launchApp:
    clearState: true
    clearKeychain: true

- runFlow: subflows/start-wallet-onboarding.yml
- runFlow: subflows/complete-wallet-onboarding-without-email.yml

- tapOn: "Open settings"
- scrollUntilVisible:
    element:
      id: "settings-board-ark"
    direction: DOWN
    centerElement: true
- tapOn:
    id: "settings-board-ark"
- assertVisible:
    id: "board-ark-screen"
- assertVisible: "Confirmed onchain balance"
- assertVisible:
    id: "board-ark-amount-input"
- assertVisible:
    id: "board-ark-submit-button"
